# smart_city_2025

./: README.md  python_test.py  수업 내용.md
data/: banklist.csv  hello.txt  info.txt  question.pickle  question.txt  sample1.xlsx  scientists_edit_ed.xlsx  sin_sample.npz  students.txt
doc/: web_fastapi_tablo.md
numpy_test/: a01_numpy.py  a02_array_init.py  a03_array_init2.py  a04_broadcasting.py  a05_indexing.py  a06_transpose.py
opencv_test/: a01_imshow.py  a02_imread.py  a03_videoCap.py  a04_putText.py  a05_inrange.py  a06_canny.py  cnn-lenet.py  python-test.py  textSprite.py
opencv_yolo/: a01_opencv_test.py  a02_video.py  a03_imwrite.py  a04_video_cam.py  a05_put_text.py  a06_text_class.py  a07_cv2_cnn.py  a08_pytorch_cnn.py  main.py  pyproject.toml  sprite.py  testSprite.py
orange_workflow/: datapreprocessing.ows  decision_model  microdust.ows  model.ows  q.html  test.ows
pandas_test/: a01_series.py  a02_indexing.py  a03_user_indexing.py  a04_dataframe.py  a05_exel_read_write.py  a06_count.py  util.py
project/: yunet_deidentification.py  (+3 more)
project/parkingArea/: README.md  UV_GUIDE.md  advanced_parking.py  dev.sh  main.py  main_topic.md  optimized_parking.py  perspective_parking.py  pyproject.toml  realworld_parking.py  requirements.txt  run_all_analysis.sh  run_analysis.sh  simple_parking.py
project/parkingArea/optimized_perspective_results/: optimized_analysis.json
project/parkingArea/perspective_results/: perspective_analysis.json
project/parkingArea/test/: README.md  obb_monitor.py  quick_obb_viewer.py  realtime_obb_monitor.py  run_obb_tests.sh
(+60 files in other folders)
